Report Cloudflare's 1xxx error code on its error pages
